# Genarris

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: release-drafter.yml
.github/workflows/: docs.yml  lint.yml  release-drafter.yml  release.yml
cases/: README.md
cases/CL-20/: CL-20.csv  PUBMUU02.cif
cases/CL-20/MACE/: 13e32ef3bb08e8.cif  1555cb8db560763.cif  1684ceb09245d8d.cif  17ba7d713c5990f.cif  1894deae459f9a1.cif  18daf237894ca0b.cif  18ecd32dbe30a44.cif  1a3445915a1dbc7.cif  1a4c82f13c0b5f4.cif  1b0fb933b4c368e.cif  1c404cd67e34315.cif  1cd1cbce0a5a57.cif  1d9af6582ec9f2d.cif  1f3bae72040258b.cif  2139b5335f470d7.cif  21b7c68408cbd09.cif  222282e74daaebf.cif  22728ed7e439688.cif  249ab69b9e81d13.cif  24d1b6094f01060.cif  2d309be35dfb5b0.cif  33d050922344203.cif  35751f404ffb262.cif  3832903d53118c8.cif  3f235e14641835f.cif  3fb7f29024f0b1e.cif  411aec1bd1bdaf8.cif  42f11281ab70016.cif  434d610b05dc7e6.cif  45762bfcf71580a.cif  47285a988293f2b.cif  4756c7716340c3a.cif  4fbbec3f35f2427.cif  4fbfbafc8d3a571.cif  51183070816409d.cif  522d2012e06ae3d.cif  536b898dc689a76.cif  56f3650b40df9e2.cif  574697937c603f7.cif  57d16fdb0805882.cif  (+97 more)
cases/CL-20/PBE_MBD/: 13e32ef3bb08e8.cif  1555cb8db560763.cif  1684ceb09245d8d.cif  17ba7d713c5990f.cif  1894deae459f9a1.cif  18daf237894ca0b.cif  18ecd32dbe30a44.cif  1a3445915a1dbc7.cif  1a4c82f13c0b5f4.cif  1b0fb933b4c368e.cif  1c404cd67e34315.cif  1cd1cbce0a5a57.cif  1d9af6582ec9f2d.cif  1f3bae72040258b.cif  2139b5335f470d7.cif  21b7c68408cbd09.cif  222282e74daaebf.cif  22728ed7e439688.cif  249ab69b9e81d13.cif  24d1b6094f01060.cif  2d309be35dfb5b0.cif  33d050922344203.cif  35751f404ffb262.cif  3832903d53118c8.cif  3f235e14641835f.cif  3fb7f29024f0b1e.cif  411aec1bd1bdaf8.cif  42f11281ab70016.cif  434d610b05dc7e6.cif  45762bfcf71580a.cif  47285a988293f2b.cif  4756c7716340c3a.cif  4fbbec3f35f2427.cif  4fbfbafc8d3a571.cif  51183070816409d.cif  522d2012e06ae3d.cif  536b898dc689a76.cif  56f3650b40df9e2.cif  574697937c603f7.cif  57d16fdb0805882.cif  (+97 more)
cases/DNI/: DNI.csv  TEVHEH01.cif
cases/DNI/MACE/: 10e6e6ca74219e2.cif  133b5a934797830.cif  13c9ca1ac6849e7.cif  1ada7d12527b89.cif  1ca7ad0f0e267a4.cif  1d20349646922d6.cif  1f151348f4ba71c.cif  214ce4633dd3c1.cif  2170beb630d1fc.cif  24578755f86f15f.cif  25189b4521086e8.cif  280f8f4508c3038.cif  28494e99eddd8bc.cif  2a2921a6276ea8.cif  2a790e11e4248c0.cif  2abab8669f2feb8.cif  2d7a4408e4d8d3f.cif  30eade37b6fe7ea.cif  314d0c2b59e26e1.cif  326f7032905e73.cif  334f0114690c648.cif  3387ef49ef75f2a.cif  33fd4018d8bd5ad.cif  3410c8549608b60.cif  347ad18b354414b.cif  34ad7124dd6271c.cif  3567f4176f52e26.cif  360863b3e0eebf6.cif  365b0d2f4cd2ff0.cif  36fae29ba76398a.cif  3b287fd8efbceb6.cif  3f45f6a227c5bed.cif  403a9608652dbd0.cif  408492c24034b66.cif  42969cff9201230.cif  4652cdb40caeb7a.cif  4905810358a1fde.cif  4a5052ea346b35b.cif  4e38c2bdc97697a.cif  520119ad190db58.cif  (+76 more)
cases/DNI/PBE_MBD/: 10e6e6ca74219e2.cif  133b5a934797830.cif  13c9ca1ac6849e7.cif  1ada7d12527b89.cif  1ca7ad0f0e267a4.cif  (+111 more)
cases/HMX/: HMX.csv  OCHTET03.cif
cases/Target_I/: Target_I.csv  XULDUD.cif
cases/Target_XXII/: NACJAF.cif  Target_XXII.csv
cases/aspirin/: ACSALA00.cif  ACSALA17.cif  aspirin.csv
docs/: conf.py  index.md  requirements.txt
docs/about/: case_studies.md  changelog.md  citation.md  examples.md  license.md
docs/api/: gnrs.cluster.rst  gnrs.core.rst  gnrs.deduplication.rst  gnrs.descriptor.rst  gnrs.energy.rst  gnrs.generation.rst  gnrs.gnrsutil.rst  gnrs.optimize.rst  gnrs.parallel.rst  gnrs.workflow.rst  index.rst
docs/config/: clustering.md  dedup.md  descriptor.md  energy.md  experimental.md  generation.md  index.md  master.md  optimizers.md  rigidpress.md  selection.md  workflow.md
docs/dev/: dev.md
docs/user/: install.md  quickstart.md
gnrs/: __init__.py  cli.py  genarris_master.py  workflow.py
gnrs/cluster/: ap.py  cluster_task.py  kmeans.py
gnrs/core/: cluster.py  descriptor.py  energy.py  folders.py  gpu.py  logging.py  molecule.py  optimizer.py  registry.py  selection.py  structure.py  task.py
gnrs/deduplication/: __init__.py  dedup.py  deduplication_task.py
gnrs/descriptor/: __init__.py  acsf.py  descriptor_task.py
gnrs/energy/: __init__.py  aimnet.py  aims.py  dftbp.py  energy_task.py  maceoff.py  uma.py  vasp.py
gnrs/generation/: __init__.py  generation_task.py
gnrs/gnrsutil/: core.py  h_bond.yaml  molecule_bonding.py  mpi_cmd.py  pymove_model.yaml  volume_estimation.py
gnrs/optimize/: __init__.py  bfgs.py  lbfgs.py  optimization_task.py  rigid_press.py  rpress_symm_impl.py  symm_rigid_press.py
gnrs/output/: messages.py  templates.py
gnrs/parallel/: __init__.py  io.py  structs.py  test.py
gnrs/parser/: __init__.py  defaults.json  defaults.yaml  parser.py  sanity_check.py
gnrs/restart/: __init__.py
(+826 files in other folders)
