[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "swig",
    "Cython",
    "numpy>=2.0,<2.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "gnrs"
version = "3.0.0"
description = "A random molecular crystal structure generator"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Yi Yang", email = "yiy5@andrew.cmu.edu"},
    {name = "Rithwik Tom"}
]
maintainers = [
    {name = "Yi Yang", email = "yiy5@andrew.cmu.edu"},
]
keywords = ["crystal structure", "molecular crystals", "crystal structure prediction", "materials science"]
requires-python = ">=3.9,<3.12"
dependencies = [
    "torch~=2.8.0",
    "numpy>=2.0,<2.3",
    "swig",
    "numba>=0.60",
    "mpi4py==3.1.5",
    "ase",
    "spglib",
    "pymatgen",
    "matplotlib",
    "pyyaml",
    "tqdm",
    "packaging>=21.2",
    "pyparsing==2.4.7",
    "h5py<3.15",
    "dscribe"
]

[project.optional-dependencies]  # add optional dependencies, e.g. to be installed as pip install .[uma]
uma = ["fairchem-core"]
mace = ["mace-torch"]

[project.scripts]
gnrs = "gnrs.genarris_master:main"

[project.urls]
repository = "https://github.com/Yi5817/Genarris.git"
home = "https://www.noamarom.com/software/genarris"

[tool.setuptools]
packages = ["gnrs"]
include-package-data = true

[tool.setuptools.package-data]
"gnrs.parser" = ["defaults.json"]
"gnrs.generation.cgenarris" = ["src/**/*"]