[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools-scm>=8",
    "swig>=4.1,<4.3",
    "Cython",
    "numpy>=2.0,<2.3",
    "mpi4py",
]
build-backend = "setuptools.build_meta"

[project]
name = "gnrs"
dynamic = ["version"]
description = "A random molecular crystal structure generator"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Yi Yang", email = "yiy5@andrew.cmu.edu"},
    {name = "Rithwik Tom"}
]
maintainers = [
    {name = "Yi Yang", email = "yiy5@andrew.cmu.edu"},
]
keywords = ["crystal structure", "molecular crystals", "crystal structure prediction", "materials science"]
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch~=2.8.0",
    "numpy>=2.0,<2.3",
    "numba>=0.60",
    "mpi4py",
    "ase",
    "spglib",
    "pymatgen<=2025.10.7",
    "matplotlib",
    "pyyaml",
    "tqdm",
    "packaging>=21.2",
    "pyparsing==2.4.7",
    "h5py<3.15",
    "dscribe"
]

[project.optional-dependencies]  # add optional dependencies, e.g. to be installed as pip install .[uma]
uma = ["pandas<=2.3", "fairchem-core"]
mace = ["pandas<=2.3", "mace-torch"]

[project.scripts]
gnrs = "gnrs.cli:main"

[project.urls]
repository = "https://github.com/Yi5817/Genarris.git"
homepage = "https://www.noamarom.com/software/genarris"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
tag_regex = '^gnrs-(?P<version>\d+(?:\.\d+)*)$'

[tool.setuptools.packages.find]
include = ["gnrs*"]

[tool.setuptools.package-data]
"gnrs.parser" = ["*.yaml"]
"gnrs.gnrsutil" = ["*.yaml"]
"gnrs.cgenarris" = ["src/**/*.c", "src/**/*.h", "src/**/*.i"]
